--- a/app/views/admin/areas/index.html.erb
+++ b/app/views/admin/areas/index.html.erb
@@ -1,2 +1,36 @@
 <h1>Admin::Areas#index</h1>
 <p>Find me in app/views/admin/areas/index.html.erb</p>
+<h4 class="mark">エリア追加</h4>
+
+  <%= form_with model: @area, url: admin_areas_path do |f| %>
+
+<div class="field">
+    <%= f.label :エリア名 %><br />
+
+
+      <%= f.text_field :name %>
+  </div>
+
+<div class="actions2">
+    <%= f.submit "新規登録",class:"btn btn-outline-danger mt-5" %>
+  <% end %>
+</div>
+  <tbody>
+
+<div class="col-md-2 offset-md-1">
+<table class="table">
+
+<h4>エリア一覧</h4>
+<% @areas.each do |area| %>
+    <tr>
+
+      <td><%= area.name %></td>
+      <td><%= link_to "編集する", edit_admin_area_path(area) ,class:"btn btn-outline-success" %></td>
+
+    </tr>
+<% end %>
+    </tbody>
+    </table>
+
+
+
