--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,25 @@
 <h1>Admin::Customers#index</h1>
 <p>Find me in app/views/admin/customers/index.html.erb</p>
+
+<h4 class = "mark">会員一覧</h4>
+    <tr>
+      <th>会員ID</th>
+      <th>氏名</th>
+      <th>投稿名</th>
+      <th>メールアドレス</th>
+      <th>ステータス</th>
+    </tr>
+<% @customers.each do |customer| %>
+<tr>
+      <td><%= customer.id %></td>
+      <td><%= link_to customer.name,admin_customer_path(customer),class:"btn btn-outline-danger" %></td>
+      <td><%= customer.nickname %></td>
+      <td><%= customer.email %></td>
+      <td>
+      <% if customer.is_deleted== false %>有効
+      <% else %>
+      退会
+      <% end %>
+      <% end %>
+      </td></tr>
+      <%= paginate @customers %>
