layout/admin/top

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,44 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+
+<!--管理者ヘッダー-->
+<header>
+<% if request.fullpath.include? "admin" %>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#E5CCFF;">
+  <div class="container-fluid">
+
+    <a class="navbar-brand" href="/admin">TOP</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/admin/areas">エリア一覧</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/customers">会員一覧</a>
+        </li>
+        <li class="nav-item">
+        <% if admin_signed_in? %>
+        <a class="nav-link px-2" href="/admin/sign_out">ログアウト</a>
+        <% else %>
+        <a class="nav-link px-2" href="/admin/sign_in">ログイン</a>
+        <% end %>
+        </li>
+</header>
+
+
+    </div>
+  </div>
+</nav>
+<% end %>
+<div class = "logo">
+<%= image_tag "logo.PNG", size: '150x150' %></div>
 
   <body>
     <%= yield %>
