--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,6 +1,7 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
-<h2>管理者トップページ</h2>
-<p>会員数</p>
-<p><%= @customers_id %>人</p>
-<p><%= link_to "会員一覧","admin/customers/index" %></p>
+<body>
+  <div class = "title">
+    <h2>管理者ページ</h2></div>
+
+    <p>会員数</p>
+    <p><%= @customers_id %>人</p>
+</body>
