--- a/app/views/admin/post_rooms/index.html.erb
+++ b/app/views/admin/post_rooms/index.html.erb
@@ -14,6 +14,13 @@
     </tr>
 <%= @post_rooms.each do |post_room| %>
     <tr>
+      <td>
+          <% if list.image.attached? %>
+          <%= image_tag list.image, size: "200x200" %>
+          <% else %>
+          <%= image_tag 'no_image', size: "200x200" %>
+          <% end %>
+      </td>
       <td><%= post_room.name %></td>
       <td>
       <%= post_room.created_at.strftime('%Y/%m/%d') %>
