--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -11,3 +11,18 @@
     text-align: left;
     display: inline-block;
 }
+
+body {
+  // font-family: 'Yu Gothic UI',sans-serif;
+    // font-family: "g_pencilkaisho_free";
+    // src: url('../javascript/fonts/azukiB.ttf');
+    background-color:#f0fff0;
+}
+
+.h4{
+  text-align: center;
+}
+
+footer{
+  font-family: "g_pencilkaisho_free";
+}
