--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 </nav>
 <% end %>
 <div class = "logo">
-<%= image_tag "logo.PNG", size: '150x150' %></div>
+<%= image_tag "LOGO.PNG", size: '150x150' %></div>
 
   <body>
     <%= yield %>
