--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -2,6 +2,7 @@
   <div class = "title">
     <h2>管理者ページ</h2></div>
 
-    <p>会員数</p>
+    <h4>会員数</h4>
     <p><%= @customers_id %>人</p>
 </body>
+<footer>koakokokok</footer>
