--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -26,3 +26,12 @@ body {
 footer{
   font-family: "g_pencilkaisho_free";
 }
+
+// .card-body_hover {
+// background-color: #ee6354;
+
+// }
+
+// .card-body_hover:hover {
+// background-color: #37beb0;
+// }
