--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,18 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+
+<main>
+  <h4>エリア一覧</h4>
+
+
+</main>
+
+<div class="d-grid gap-2 d-md-block">
+<a class="btn btn-secondary" href="/shops" type="submit">
+  店舗一覧</br>
+  <img src="/assets/shop.jpg" width="400" height="300" border="0" onMouseOver="this.src='/assets/room2.jpg'"　width="400" height="300" onMouseOut="this.src='/assets/shop.jpg'" />
+</a>
+
+<a class="btn btn-secondary" href="/shops" type="submit">
+  お部屋紹介</br>
+  <img src="/assets/room.jpg" width="400" height="300" border="0" onMouseOver="this.src='/assets/room2.jpg'"　width="400" height="300" onMouseOut="this.src='/assets/room.jpg'" />
+</a>
+</div>
