--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,8 +1,10 @@
 <body>
   <div class = "title">
-    <h2>管理者ページ</h2></div>
-
+    <h2>管理者ページ</h2>
+  </div>
+  <div class = "text">
     <h4>会員数</h4>
     <p><%= @customers_id %>人</p>
+  </div>
 </body>
-<footer>koakokokok</footer>
+<!--<footer>koakokokok</footer>-->
