--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,12 +35,39 @@
         <a class="nav-link px-2" href="/admin/sign_in">ログイン</a>
         <% end %>
         </li>
-</header>
-
-
     </div>
   </div>
 </nav>
+</header>
+<% else %>
+
+<header>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#E5CCFF;">
+  <div class="container-fluid">
+
+    <a class="navbar-brand" href="/admin">TOP</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/admin/areas">エリア一覧</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/customers">会員一覧</a>
+        </li>
+        <li class="nav-item">
+        <% if customer_signed_in? %>
+        <a class="nav-link px-2" href="/customers/sign_out">ログアウト</a>
+        <% else %>
+        <a class="nav-link px-2" href="/customers/sign_in">ログイン</a>
+        <% end %>
+        </li>
+    </div>
+  </div>
+</nav>
+</header>
 <% end %>
 <div class = "logo">
 <%= image_tag "LOGO.PNG", size: '150x150' %></div>
