--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,7 +1,8 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
-
-<h4 class = "mark">会員一覧</h4>
+<body>
+  <div class = "title">
+    <h4 class = "mark">会員一覧</h4>
+  </div>
+  <div class = "text">
     <tr>
       <th>会員ID</th>
       <th>氏名</th>
@@ -23,3 +24,5 @@
       <% end %>
       </td></tr>
       <%= paginate @customers %>
+    </div>
+</body>
