--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,13 +1,15 @@
 
 <main>
-  <h4>エリア一覧</h4>
-  <% @areas.each do |area| %>
-  <tr>
-    <td><%= area.name %></td>
-  </tr>
+<h4>エリア一覧</h4>
 
-  <% end %>
+<tbody>
+    <% @areas.each do |area| %>
 
+      <td>
+        <%= link_to area.name, "/areas/#{area.id}", class: "text-secondary" %>
+      </td>
+    <% end %>
+</tbody>
 
 
 
