--- a/app/views/public/shop_comments/index.html.erb
+++ b/app/views/public/shop_comments/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Public::ShopComments#index</h1>
 <p>Find me in app/views/public/shop_comments/index.html.erb</p>
+<div>
+<h2>総合評価：
+<span class="star-rating">
+ <span class="star-rating-front" style="width: <%= getPercent(t.overall) %>%;">★★★★★</span>
+ <span class="star-rating-back">★★★★★</span>
+</span>
+</h2>
+</div>
