--- a/app/views/public/post_rooms/index.html.erb
+++ b/app/views/public/post_rooms/index.html.erb
@@ -1,2 +1,37 @@
 <h1>Public::PostRooms#index</h1>
 <p>Find me in app/views/public/post_rooms/index.html.erb</p>
+<h4 class="mark">
+  <div class="container">
+    <div class="row mb-2">
+    <div class="col">お部屋一覧</div>
+
+  <div class="col">
+    <%= link_to rooms_new_path, class: "no-underline" do %>
+  <i class="fa-solid fa-circle-plus"></i>
+    <% end %>
+  </div></div></div>
+</h4>
+
+  <div class="col-md-8 offset-md-1">
+<table class="table">
+<thead>
+    <tr>
+      <th>お部屋画像</th>
+      <th>タイトル</th>
+      <th>投稿者</th>
+      </tr></thead>
+<% @post_rooms.each do |post_room| %>
+<tr>
+      <td>
+        <% if post_room.image.attached? %>
+        <%= image_tag post_room.image, size: "100x100" %>
+        <% else %>
+        <% end %></td>
+      <td><%= link_to post_room.name, "/rooms/#{post_room.id}" ,class:"btn btn-outline-danger" %></td>
+      <td><%= post_room.customer.nickname %></td>
+
+
+
+
+<% end %>
+
