--- a/app/views/public/shop_comments/new.html.erb
+++ b/app/views/public/shop_comments/new.html.erb
@@ -1,5 +1,5 @@
 <h5>総合評価</h5>
-<%= form_with model: @shop_comment do |f| %>
+<%= form_with model: @shop_comment, url: shops_path do |f| %>
    <div class="post_form">
     <%= f.radio_button :overall, 5 ,id: 'star1'%>
     <label for="star1"><span class="text">最高</span>★</label>
@@ -16,4 +16,5 @@
     <%= f.radio_button :overall, 1 ,id: 'star5'%>
     <label for="star5"><span class="text">最悪</span>★</label>
  </div>
+ <%= f.submit '評価する' %>
  <% end %>
