--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class = "text">
     <h4>会員数</h4>
-    <p><%= @customers_id %>人</p>
+    <p><%= @customers.count %>人</p>
   </div>
 </body>
 <!--<footer>koakokokok</footer>-->
