--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -19,7 +19,7 @@
   <img src="/assets/shop.jpg" width="400" height="300" border="0" onMouseOver="this.src='/assets/room2.jpg'"　width="400" height="300" onMouseOut="this.src='/assets/shop.jpg'" />
 </a>
 
-<a class="btn btn-secondary" href="/shops" type="submit">
+<a class="btn btn-secondary" href="/rooms" type="submit">
   お部屋紹介</br>
   <img src="/assets/room.jpg" width="400" height="300" border="0" onMouseOver="this.src='/assets/room2.jpg'"　width="400" height="300" onMouseOut="this.src='/assets/room.jpg'" />
 </a>
