--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,2 +1,44 @@
-<h1>Public::Customers#edit</h1>
-<p>Find me in app/views/public/customers/edit.html.erb</p>
+<%= form_with model: @customer, url: customer_path, method: :patch, local: true do |f| %>
+
+<div class="container">
+  <div class="row gx-5">
+    <div class="row row-cols-2 mb-3 p">
+
+    <div class="col mb-2"><h4 class = "mark">会員情報編集</h4></div>
+    <div class="col mb-2"></div>
+
+
+
+
+
+    <div class="col mb-2"><%= f.label :名前 %></div>
+    <div class="col mb-2"><%= f.text_field :name, autofocus: true, autocomplete: "name" %></div>
+
+
+    <div class="col mb-2"><%= f.label :ニックネーム %></div>
+    <div class="col mb-2"><%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" %></div>
+
+    <div class="col mb-2"><%= f.label :メールアドレス %></div>
+    <div class="col mb-2"><%= f.email_field :email, autofocus: true, autocomplete: "email" %></div>
+
+
+
+
+    <div class="col mb-2"><%= f.label :パスワード %>
+    <% if @minimum_password_length %>
+    <em>(<%= @minimum_password_length %> 文字以上)</em>
+    <% end %><br /></div>
+    <div class="col mb-2"><%= f.password_field :password, autocomplete: "new-password" %></div>
+
+
+
+    <div class="col mb-2"><%= f.label :パスワード（確認用） %></div>
+    <div class="col mb-2"><%= f.password_field :password_confirmation, autocomplete: "new-password" %></div>
+
+
+
+    <div class="col mb-2"><%= f.submit "編集内容を保存",class:"btn btn-outline-success mt-2" %></div>
+    <div class="col mb-2"><a class="btn btn-outline-danger mt-2" href="/unsubscribe" role="button">退会する</a></div>
+  </div>
+  </div>
+<% end %>
