--- a/app/views/public/post_shops/show.html.erb
+++ b/app/views/public/post_shops/show.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-8 offset-md-1">
 <table class="table">
-<h4 class="mark"><%= @post_shop.area.name %>一覧</h4>
+<h4 class="mark">店舗詳細</h4>
 <thead>
     <tr>
       <th>店舗画像</th>
@@ -15,7 +15,17 @@
       <td><%= @post_shop.introduction %></td>
       <td><%= @post_shop.area.name %></td>
       <td><%= @post_shop.customer.nickname %></td>
+      <% if current_customer %>
+      <td><%= link_to '編集する', edit_shop_path, class:"btn btn-outline-success" %></td>
+      <% else %>
+      <% end %>
+
 </thead>
+ <% if @post_shop.liked_by?(current_customer) %>
+      <td><%= link_to "★", post_shop_likes_path(@post_shop), method: :delete %></td>
+    <% else %>
+      <td><%= link_to "☆", post_shop_likes_path(@post_shop), method: :post %></td>
+    <% end %>
 
 <h5>総合評価</h5>
 
@@ -38,6 +48,8 @@
  </div>
     <%= f.submit '評価する' %>
  <% end %>
+
+
 
 
 
