--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -32,55 +32,30 @@ footer{
   font-family: "g_pencilkaisho_free";
 }
 
-.post_form{
+
+.star-field{
     display: flex;
     flex-direction: row-reverse;
-    justify-content: flex-end;
-  }
-  .post_form input[type='radio']{
+    justify-content: right;
+}
+.star-field input[type='radio']{
     display: none;
-  }
-  .post_form label{
-    position: relative;
-    padding: 10px 10px 0;
-    color: gray;
-    cursor: pointer;
-    font-size: 30px; /*星の大きさを変更*/
-  }
-  .post_form label .text{
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    text-align: center;
-    font-size: 9px; /*星の上の説明書きの大きさを変更*/
-    color: gray;
-  }
-  .post_form label:hover,
-  .post_form label:hover ~ label,
-  .post_form input[type='radio']:checked ~ label{
-    color: #ffcc00;
-  }
-
-/*　以下一覧ページの星用のCSS　*/
-
-  .star-rating {
-    position: relative;
-    display: inline-block;
-    width: 5em;
-    height: 1em;
-    font-size: 25px;
-  }
-  .star-rating-front {
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    color: #ffcc33;
-  }
-  .star-rating-back {
-    display: inline-block;
+}
+.star-field label{
+    font-size: 50px;
+    padding-right: 10px;
     color: #ccc;
+    font-size: 30px;
+    cursor: pointer;
+}
+.star-field label:hover,
+.star-field label:hover ~ label,
+.star-field input[type='radio']:checked ~ label{
+    color: rgb(255, 145, 0);
+}
 
-  }
+// 一覧表示ページ
+.star{
+  font-size: 50px;
+  color: rgb(255, 145, 0);
+}
