--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,17 +45,17 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#E5CCFF;">
   <div class="container-fluid">
 
-    <a class="navbar-brand" href="/admin">TOP</a>
+    <a class="navbar-brand" href="/">TOP</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/admin/areas">エリア一覧</a>
+          <a class="nav-link active" aria-current="page" href="/shops">雑貨屋一覧</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin/customers">会員一覧</a>
+          <a class="nav-link" href="/rooms">お部屋一覧</a>
         </li>
         <li class="nav-item">
         <% if customer_signed_in? %>
