--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,8 +1,12 @@
-<main class="cover-container d-flex w-40 h-50 p-3 mx-auto flex-column">
-    <h1>About</h1>
+ <div class="container-fluid">
+  <div class="row">
+    <div class="col no-gutters">
+    <img src="/assets/about.jpg" width="140%" height="650">
+    </div>
     <p class="lead">雑貨Lifeへようこそ</br>
   雑貨用品好きな方のためのサイトとなっております。</br>
-  いろんな方のおすすめの雑貨屋や、こだわりのお部屋紹介を</br>
+  いろんな方のおすすめの雑貨屋や、</br>こだわりのお部屋紹介を</br>
   覗くことができます。</br>
   あなたのおすすめやこだわりもぜひ教えてください。</p>
-  </main>
+  </div>
+</div>
