--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -12,16 +12,16 @@
 </tbody>
 
 
-
-<div class="d-grid gap-2 d-md-block">
+<div class = "topmenu">
+<div class="d-grid gap-2">
 <a class="btn btn-secondary" href="/shops" type="submit">
   店舗一覧</br>
-  <img src="/assets/shop.jpg" width="400" height="300" border="0" onMouseOver="this.src='/assets/room2.jpg'"　width="400" height="300" onMouseOut="this.src='/assets/shop.jpg'" />
+  <img src="/assets/shop.jpg" width="400" height="300" border="0" onMouseOver="this.src='/assets/shop2.jpg'" width="400" height="300" onMouseOut="this.src='/assets/shop.jpg'" />
 </a>
 
 <a class="btn btn-secondary" href="/rooms" type="submit">
   お部屋紹介</br>
-  <img src="/assets/room.jpg" width="400" height="300" border="0" onMouseOver="this.src='/assets/room2.jpg'"　width="400" height="300" onMouseOut="this.src='/assets/room.jpg'" />
+  <img src="/assets/room.jpg" width="400" height="300" border="0" onMouseOver="this.src='/assets/room2.jpg'" width="400" height="300" onMouseOut="this.src='/assets/room.jpg'" />
 </a>
-</div>
+</div></div>
 </main>
