--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 <% else %>
 
 <header>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#E5CCFF;">
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
 
     <a class="navbar-brand" href="/">TOP</a>
@@ -51,6 +51,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="/about">About</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/shops">雑貨屋一覧</a>
         </li>
@@ -69,10 +72,8 @@
 </nav>
 </header>
 <% end %>
-<div class = "logo">
-<%= image_tag "LOGO.PNG", size: '150x150' %></div>
 
-  <body>
+
     <%= yield %>
-  </body>
+
 </html>
