--- a/app/views/public/post_shops/index.html.erb
+++ b/app/views/public/post_shops/index.html.erb
@@ -1,16 +1,15 @@
-<h4 class="mark">
+<h4 class="mark">店舗一覧
   <div class="container">
-    <div class="row mb-2">
-    <div class="col">店舗一覧</div>
+
 
   <div class="col">
     <%= link_to shops_new_path, class: "no-underline" do %>
   <i class="fa-solid fa-circle-plus"></i>
     <% end %>
-  </div></div></div>
+  </div></div>
 </h4>
 
-  <div class="col-md-8 offset-md-1">
+
 <table class="table">
 <thead>
     <tr>
