--- a/app/views/public/post_shops/show.html.erb
+++ b/app/views/public/post_shops/show.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-8 offset-md-1">
+
 <table class="table">
 <h4 class="mark">店舗詳細</h4>
 <thead>
@@ -22,9 +22,10 @@
 
 </thead>
  <% if @post_shop.liked_by?(current_customer) %>
-      <td><%= link_to "★", post_shop_likes_path(@post_shop), method: :delete %></td>
+
+      <td><%= link_to image_tag("star.on.png",size: '50x50'), post_shop_likes_path(@post_shop), method: :delete %></td>
     <% else %>
-      <td><%= link_to "☆", post_shop_likes_path(@post_shop), method: :post %></td>
+      <td><%= link_to image_tag("star.off.png",size: '50x50'), post_shop_likes_path(@post_shop), method: :post %></td>
     <% end %>
 
 
