--- a/app/views/public/post_shops/index.html.erb
+++ b/app/views/public/post_shops/index.html.erb
@@ -1,13 +1,11 @@
-<h4 class="mark">店舗一覧
+<h4 class="mark">雑貨屋一覧
+<%= link_to "新規投稿", shops_new_path, class:"btn btn-outline-success" %>
+</h4>
   <div class="container">
 
 
-  <div class="col">
-    <%= link_to shops_new_path, class: "no-underline" do %>
-  <i class="fa-solid fa-circle-plus"></i>
-    <% end %>
-  </div></div>
-</h4>
+  </div>
+
 
 
 <table class="table">
