--- a/app/views/public/post_rooms/index.html.erb
+++ b/app/views/public/post_rooms/index.html.erb
@@ -1,13 +1,7 @@
-<h4 class="mark">
-  <div class="container">
-    <div class="row mb-2">
-    <div class="col">お部屋一覧</div>
+<h4 class="mark">お部屋一覧
 
-  <div class="col">
-    <%= link_to rooms_new_path, class: "no-underline" do %>
-  <i class="fa-solid fa-circle-plus"></i>
-    <% end %>
-  </div></div></div>
+    <%= link_to "新規投稿", rooms_new_path, class:"btn btn-outline-success" %>
+
 </h4>
 
   <div class="col-md-8 offset-md-1">
